<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.krishna.taskfour.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:layout_width="215dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:id="@+id/button"
        android:hint="@string/button"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/black"/>

    <TextView
        android:hint="@string/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_width="215dp"
        android:textSize="29sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:hint="@string/textView"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/editText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button" />
</RelativeLayout>
